fixed header and footer width on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -492,11 +492,10 @@ a {
 /* main braiking point for mobile */
 @media only screen and (max-width: 700px) {
 	.header__content,
+	.nav__content,
+	.footer__content,
 	.section {
 		width: 92%;
-	}
-	.nav {
-		padding: 0 4%;
 	}
 	.nav__links {
 		display: none;
